cleanup; update swagger
