# server/docs/swagger.yaml
@@ -1,4 +1,3 @@
-basePath: /api
 definitions:
   PageSize:
     properties:
@@ -83,16 +82,10 @@ definitions:
         description: Optional template for footer. If empty, the footer template will
           be parsed from main template (<PdfFooter></PdfFooter>).
         type: string
-      footerModel:
-        description: Optional model for footer. If empty or null model was used.
-        type: object
       headerHtmlTemplate:
         description: Optional template for header. If empty, the header template will
           be parsed from main template (<PdfHeader></PdfHeader>).
         type: string
-      headerModel:
-        description: Optional model for header. If empty or null model was used.
-        type: object
       htmlTemplate:
         type: string
       model:
@@ -130,6 +123,36 @@ info:
   title: PdfTurtle API
   version: "1.0"
 paths:
+  /pdf/from/bundle/render:
+    post:
+      consumes:
+      - multipart/form-data
+      description: Returns PDF file generated from bundle (Zip-File) of HTML or HTML
+        template of body, header, footer and assets. The index.html file in the Zip-Bundle
+        is required.
+      parameters:
+      - description: Bundle Zip-File
+        in: formData
+        name: bundle
+        required: true
+        type: file
+      - description: JSON-Model for template (only required for template)
+        in: formData
+        name: model
+        type: string
+      - description: Template engine to use for template (only required for template)
+        in: formData
+        name: templateEngine
+        type: string
+      produces:
+      - application/pdf
+      responses:
+        "200":
+          description: PDF File
+      summary: 'Render PDF from bundle and model provided in form-data (keys: bundle,
+        model)'
+      tags:
+      - Render Bundle including HTML(-Template) and assets
   /pdf/from/html-template/render:
     post:
       consumes:
@@ -150,7 +173,7 @@ paths:
           description: PDF File
       summary: Render PDF from HTML template
       tags:
-      - render html-template
+      - Render HTML-Template
   /pdf/from/html-template/test:
     post:
       consumes:
@@ -172,7 +195,7 @@ paths:
             $ref: '#/definitions/TemplateTestResult'
       summary: Test HTML template matching model
       tags:
-      - test html-template
+      - Render HTML-Template
   /pdf/from/html/render:
     post:
       consumes:
@@ -192,7 +215,7 @@ paths:
           description: PDF File
       summary: Render PDF from HTML
       tags:
-      - render html
+      - Render HTML
 schemes:
 - http
 swagger: "2.0"
